--- a/GameServer/GameServer/GameServer.vcxproj
+++ b/GameServer/GameServer/GameServer.vcxproj
@@ -817,7 +817,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;INTERNATIONAL_JAPAN;_DISABLE_LICENSE;%(PreprocessorDefinitions);S6E3</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;INTERNATIONAL_JAPAN;_DISABLE_LICENSE;%(PreprocessorDefinitions);S6E3;GS_CS_UNITED</PreprocessorDefinitions>
       <AssemblerOutput>NoListing</AssemblerOutput>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BrowseInformation>false</BrowseInformation>
