--- a/GameServer/GameServer/GameServer.vcxproj.filters
+++ b/GameServer/GameServer/GameServer.vcxproj.filters
@@ -1698,6 +1698,9 @@
     <ClCompile Include="CustomBossDrop.cpp">
       <Filter>LCCustom</Filter>
     </ClCompile>
+    <ClCompile Include="HuntingSystem.cpp">
+      <Filter>LCCustom</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameServer.rc">
@@ -2788,6 +2791,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Common\Packets.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HuntingSystem.h">
+      <Filter>LCCustom</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
